<resources>
    <string name="app_name">TicketTravel</string>
    <string name="name">Ticket Travel</string>
    <string name="user_text">Usuario</string>
    <string name="pass_text">Contraseña</string>
    <string name="button_login_text">Login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Recyclernull">No existen Tickets</string>
    <string name="newticket">Nuevo Ticket</string>
    <string name="delete">Borrar</string>
    <string name="status">Estado:</string>
    <string name="open">Abierto</string>
    <string name="origin">Origen:</string>
    <string name="destiny">Destino:</string>
    <string name="datedeparture">Fecha Salida</string>
    <string name="datereturn">Fecha Regreso</string>
    <string name="addticket">Agregar Ticket</string>
    <string name="viewtravel">Ver Viaje</string>
    <string name="Loading">Actualizando Tickets, por favor espere...</string>
    <string name="title_actionBar_mainActivity">Ticket Travel</string>
    <string name="title_travel_item_rendir_fragment">Viaje N°: </string>
    <string name="title_name_user_nav_bar">Bienvenido: </string>

    <!--status travel list-->
    <string name="status_travel_closed">Cerrado</string>

    <!--type ticket-->
    <string name="type_ticket_taxi">Taxi</string>



    <string name="toast_text_updated_edit_ticket">Ticket Actualizado</string>
    <string name="toast_text_updated_error_edit_ticket">Ocurrio Problema al Actualizar Ticket</string>
    <string name="toast_text_updated_error_field_validation_edit_ticket">Complete el ticket con todos los campos y foto de ticket</string>

    <string name="dialog_logout_title">Cerrar Sesión</string>
    <string name="dialog_logout_message">¿Estas seguro que deseas cerrar sesión?</string>
    <string name="dialog_logout_text_btn_ok">Si</string>
    <string name="dialog_logout_text_btn_cancel">No</string>

</resources>
