<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activities.LoginActivity"
    android:fitsSystemWindows="true"
    android:background="@drawable/loginscreen">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:weightSum="1">

        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_userText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_text"
                android:maxLines="1"
                android:minLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_passText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass_text"
                android:inputType="textPassword"
                android:maxLines="1"
                android:minLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/login_buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/gradient"
            android:text="@string/button_login_text"
            android:theme="@style/RaisedButton" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationlottielogin"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            app:lottie_autoPlay="true"
            app:lottie_fileName="material_loader.json"
            app:lottie_loop="true" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>

</ScrollView>
